Add head tag where it should be

--- a/assets/time-use-test.html
+++ b/assets/time-use-test.html
@@ -1,6 +1,5 @@
-<!-- Unsure if I need this html tag -->
 <html>
-
+<head>
 <!-- Skip this line if you're already using jQuery -->
 <script src="https://www.guidedtrack.com/assets/jquery_gt.js"></script>
 
@@ -10,9 +9,9 @@
 <link rel="stylesheet" type="text/css" href="https://www.guidedtrack.com/assets/bootstrap.css">
 
 <link rel="stylesheet" type="text/css" href="https://www.guidedtrack.com/assets/guidedtrack.css">
-
+</head>
+     
 <body>
-
 <div aria-live='polite' class='guidedtrack program_container col-md-8 col-md-offset-2' data-environment='production' id='qg2mtl0'>
     <div id='program_navigation'>
     <div id='back-button'></div>
@@ -26,5 +25,6 @@
     <div class='maintain'></div>
     <div class='main'></div>
     </div>
-
 </body>
+    
+</html>
